--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
         <title>Home</title>
     </head>
     <body>
-        <h1 class="titolo">HOME</h1>
+        <h1 class="titolo">GEO-COBRA</h1>
         <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" alt = "libro" width="600" height="400"></a>
         <a id = "quiz" href = "/quiz"><img src="static/images/quizHome.jpg" alt = "Quiz_Time" width="600" height="400"></a>
     </body>
