--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -1,14 +1,6 @@
 <form action="/quiz" method = "GET">
-    <p>Inserisci il tuo Nickname: <input type = "text" name = "Name" /></p>
-    <p>Sex <input type = "radio" name = "Sex" value="M" />M <input type = "radio" name = "Sex" value="F" />F <input type = "radio" name = "Sex" value="A" />Altro</p>
-    City<select name="City">
-        <option value=""></option>
-        <option>Milano</option>
-        <option>Roma</option>
-        <option>Napoli</option>
-      </select>
-    </p>
-    <p><textarea name="Comments" rows="4" cols="50"></textarea>
-    </p>
-    <p><input type = "submit" value = "Submit" /></p>
+    <p>Inserisci il tuo Nickname: <input type = "text" name = "Name" required/></p>
+    <p>Inserisci il tuo Sesso: <input type = "radio" name = "Sex" value="M" required/>M <input type = "radio" name = "Sex" value="F"/>F</p>
+
+    <p><input type = "submit" value = "Conferma Registrazione" /></p>
 </form>
