--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,1 +1,13 @@
-{{text}}
+<head>
+
+</head>
+<body>
+    <img src="/regione_png">
+    <form action="/quiz" method = "GET">
+        <p>
+            <input type = "radio" name = "Scelta" value="1" required/>{{opzione1}} <input type = "radio" name = "Scelta" value="2"/>{{opzione2}} <br>
+            <input type = "radio" name = "Scelta" value="3"/>{{opzione3}} <input type = "radio" name = "Scelta" value="4"/>{{opzione4}}
+        </p>
+        <p><input type = "submit" value = "Conferma Scelte" /></p>
+    </form>
+</body>
