--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -3,7 +3,7 @@
 </head>
 <body>
     <img src="/regione_png">
-    <form action="/quiz" method = "GET">
+    <form action="/quiz2" method = "GET">
         <p>
             <input type = "radio" name = "Scelta" value="1" required/>{{opzione1}} <input type = "radio" name = "Scelta" value="2"/>{{opzione2}} <br>
             <input type = "radio" name = "Scelta" value="3"/>{{opzione3}} <input type = "radio" name = "Scelta" value="4"/>{{opzione4}}
