--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -2,5 +2,5 @@
     <p>Inserisci il tuo Nickname: <input type = "text" name = "Name" required/></p>
     <p>Inserisci il tuo Sesso: <input type = "radio" name = "Sex" value="M" required/>M <input type = "radio" name = "Sex" value="F"/>F</p>
 
-    <p><input type = "submit" value = "Conferma Registrazione" /></p>
+    <p><input type = "submit" value = "Conferma e Accedi al Quiz" /></p>
 </form>
