--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -1,4 +1,4 @@
-<form action="/quiz" method = "GET">
+<form action="/difficolta" method = "GET">
     <p>Inserisci il tuo Nickname: <input type = "text" name = "Name" required/></p>
     <p>Inserisci il tuo Sesso: <input type = "radio" name = "Sex" value="M" required/>M <input type = "radio" name = "Sex" value="F"/>F</p>
 
