--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -2,7 +2,7 @@
 
 </head>
 <body>
-    <h2>{{name}} {{score}}</h2>
+    <h2>GIOCATORE: {{name}}    PUNTEGGIO: {{score}}</h2>
     <img src="/regione_png">
     <form action="/quiz_facile" method = "GET">
         <p>
