--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -1,8 +1,9 @@
 <head>
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h2>GIOCATORE: {{name}}    PUNTEGGIO: {{score}}</h2>
+    <h2>GIOCATORE: {{name}}                   PUNTEGGIO: {{score}}</h2>
+    <h1 id = "sottotitolo">{{text}}</h1>
     <img src="/regione_png">
     <form action="/quiz_facile" method = "GET">
         <p>
