--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -1,3 +1,6 @@
-<a href="/RisS"><input type="search" id="search" placeholder="Search" name="search" /></a>
+<form action="/RisS" method = "GET">
+<input type="text" id="search" placeholder="Search" name="search" />
 <button> <a id="regione" href="/Regione">Regione </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
+
+</form>
