--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -1,8 +1,8 @@
 <form action="/RisS" method = "GET">
 <input type="text" id="search" placeholder="Search" name="search" />
-
-<button> <a id="regione" href="/Regione">Regione </a></button>
+<input type = "submit" value = "Cerca"/>
+<button> <a id="regione" href="/">Regione </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
-<iframe class="map", src="/map" width="600" height="600"></iframe>
+<iframe class="map", src="/map" width="100%" height="100%"></iframe>
 </form>
 
