--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,10 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <title>Home</title>
     </head>
-    <body>
-        <h1 class="titolo">GEO-COBRA</h1>
-        <a id = "ricerca" href = "/ricerca"><img src="static/images/login.png" width="100" height="100"></a>
+    <body id = "home">
+        <img id = "cobra" src="static/images/Cobra(3).png" width="300" height="200">
+        <a id = "accedi_png" href = "/login"><img src="static/images/login.png" width="100" height="100"></a>
+        <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" width="600" height="400"></a>
         <a id = "quiz" href = "/registrazione"><img src="static/images/quizHome.jpg" alt = "Quiz_Time" width="600" height="400"></a>
     </body>
 </html>
