--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -1,8 +1,9 @@
-<form action="/RisS" method = "GET">
-<input type="text" id="search" placeholder="Search" name="search" />
-<input type = "submit" value = "Cerca"/>
+<form action="/ricerca" method = "GET">
+    <input type="text"  placeholder="Search" name="Cerca" />
+    <input type = "submit" value = "Cerca"/>
+</form>
 <button> <a id="regione" href="/">Regione </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
 <iframe class="map", src="/map" width="100%" height="100%"></iframe>
-</form>
+
 
