--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
         <title>Home</title>
     </head>
     <body id = "home">
+        {{table|safe}}
         <img id = "cobra" src="static/images/Cobra(3).png" width="300" height="200">
         <a id = "accedi_png" href = "/registrazione"><img src="static/images/login(1).png" width="100" height="100"></a>
         <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" width="600" height="400"></a>
