--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -1,5 +1,5 @@
 <form action="/ricerca" method = "GET">
-    <input type="text"  placeholder="Search" name="Cerca" />
+    <input type="text"  placeholder="Cerca Regione" name="Cerca" />
     <input type = "submit" value = "Cerca"/>
 </form>
 <button> <a id="regione" href="/">Regione </a></button>
