--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -3,7 +3,8 @@
 </head>
 <body>
     <h2>                 PUNTEGGIO: {{score}}</h2>
-    <h1 id = "sottotitolo">{{text}}</h1>
+    <h2>{{question}}</h2>
+    <h1 id = "sottotitolo">{{text}}/10</h1>
     <img src="/regione_png">
     <form action="/quiz_facile" method = "GET">
         <p>
