--- a/templates/province.html
+++ b/templates/province.html
@@ -4,4 +4,4 @@
 </form>
 <button> <a id="regione" href="/">Regione </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
-<iframe class="map", src="/mappaRichiestaProv" width="100%" height="100%"></iframe>
+<iframe class="map", src="/mappa" width="100%" height="100%"></iframe>
