--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -2,9 +2,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h2>                 PUNTEGGIO: {{score}}</h2>
-    <h2>{{question}}</h2>
-    <h1 id = "sottotitolo">{{text}}/10</h1>
+    <h2>PUNTEGGIO: {{score}}</h2>
+    <h2>{{question}}/10</h2>
+    <h1 id = "sottotitolo">{{text}}</h1>
     <img src="/regione_png">
     <form action="/quiz_facile" method = "GET">
         <p>
