--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,3 @@
-#ricerca {
-    position: absolute;
-    top: 200px;
-    left: 100px;
-    padding: 50px;
-    text-align: center;
-}
-#quiz {
-    position: absolute;
-    top: 200px;
-    left:1000px;
-    padding: 50px;
-
-}
-#sottotitolo {
-    position: absolute;
-    top: 1%;
-    left: 50%;
-}
 #home {
     background-color: rgb(103, 45, 156);
 }
@@ -29,4 +10,14 @@
     position: absolute;
     top: 1%;
     right: 2%;
+}
+#ricerca {
+    position: absolute;
+    top: 1%;
+    left: 50%
+}
+#quiz {
+    position: absolute;
+    top: 30%;
+    left: 30%;
 }
