--- a/templates/home.html
+++ b/templates/home.html
@@ -6,14 +6,16 @@
     <body id = "home">
         <img id = "cobra" src="static/images/Cobra(3).png" width="300" height="200">
         <a id = "accedi_png" href = "/registrazione"><img src="static/images/login(1).png" width="100" height="100"></a>
-        <div id = "imgHome">
-            <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" width="600" height="400"></a>
-            <img id = "quiz" src="static/images/quizHome.jpg" alt = "Quiz_Time" width="30%" height="40%" onclick="alertDiff()">
-        </div>
+        <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" width="600" height="400"></a>
+        <form action="/difficolta" method = "GET">
+            <input type = "button" id = "BtnFacile" name = "Diff" value = "Facile" required/>
+            <input type = "button" id = "BtnDifficile" name = "Diff" value = "Difficile" required/>
+            <input type = "image" id = "quiz" src="static/images/quizHome.jpg" width="30%" height="40%" alt = "Submit Form">
+        </form>
         <script>
-            function alertDiff() {
-                alert("L")
-            }
+            
+                
+        
         </script>
     </body>
 </html>
