--- a/templates/cerca.html
+++ b/templates/cerca.html
@@ -1,1 +1,2 @@
-<iframe class="map", src="/mappaRichiesta" width="100%" height="100%"></iframe>
+{{table | safe}}
+<iframe class="map", src="/mappaRichiesta" width="100%" height="94%"></iframe>
