--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,14 @@
         <a id = "accedi_png" href = "/registrazione"><img src="static/images/login(1).png" width="100" height="100"></a>
         <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" width="600" height="400"></a>
         <form action="/difficolta" method = "GET">
-            <input type = "button" id = "BtnFacile" name = "Diff" value = "Facile" required/>
-            <input type = "button" id = "BtnDifficile" name = "Diff" value = "Difficile" required/>
+            <label>
+                <input type="radio" name="Diff" value="Facile" required>
+                <img src="static/images/slow.png">
+            </label>
+            <label>
+                <input type="radio" name="Diff" value="Difficile" required>
+                <img src="static/images/fast.png">
+            </label>
             <input type = "image" id = "quiz" src="static/images/quizHome.jpg" width="30%" height="40%" alt = "Submit Form">
         </form>
         <script>
