--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -2,7 +2,7 @@
     <input type="text"  placeholder="Cerca Regione" name="Cerca" />
     <input type = "submit" value = "Cerca"/>
 </form>
-<button> <a id="regione" href="/">Regione </a></button>
+<button> <a id="regione" href="/">Regioni </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
 <iframe class="map", src="/map" width="100%" height="100%"></iframe>
 
