--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,10 @@
         <title>Home</title>
     </head>
     <body id = "home">
+        <img id = "banda" src="static/images/Banda Viola(2).png" width="100%" height="18.4%">
         <img id = "cobra" src="static/images/Cobra(3).png" width="15%" height="17%">
         <a id = "accedi_png" href = "/registrazione"><img src="static/images/login(1).png" width="100" height="100"></a>
-        <a id = "ricerca" href = "/ricerca"><img src="static/images/explore.jpg" width="600" height="400"></a>
+        <a id = "ricerca" href = "/ricerca"><img src="static/images/esplora.png" width="30%" height="40%"></a>
         <form action="/difficolta" method = "GET">
             <label>
                 <input id = "easy_img" type="radio" name="Diff" value="Facile" required>
@@ -16,13 +17,9 @@
                 <input id = "hard" type="radio" name="Diff" value="Difficile" required>
                 <img id = "hard_img" src="static/images/fast.png" width = "100" height = "85">
             </label>
-            <input type = "image" id = "quiz" src="static/images/quizHome.jpg" width="600px" height="400px" alt = "Submit Form">
+            <input type = "image" id = "quiz" src="static/images/quiz.png" width="30%" height="40%" alt = "Submit Form">
         </form>
         <b><h1 id = "Difficolta">Seleziona la difficoltà:</h1></b>
-        <script>
-            
-                
-        
-        </script>
+        <h2 id = "desc_explore">Nella sezione "explore" potari interagire con una mappa geografica dell'Italia, ed attraverso quest'utlima potrai reperire le informazioni riguardanti le regioni e le province dell'Italia stessa</h2>
     </body>
 </html>
