--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,13 @@
 #home {
-    background-color: rgb(103, 45, 156);
+    background-color: rgb(97, 37, 153);
+}
+#banda {
+    position: absolute;
+    top: 0%;
 }
 #cobra {
     position: absolute;
-    top: 2%;
+    top: 1.3%;
     left: 43.5%;
 }
 #accedi_png {
@@ -45,4 +49,10 @@
     position: absolute;
     top: 59%;
     right: 22.5%;
+}
+#desc_explore {
+    position: absolute;
+    top: 73%;
+    left: 17%;
+    color:rgb(255, 255, 255)
 }
