--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <img id = "banda" src="static/images/Banda Viola(2).png" width="100%" height="18.4%">
         <img id = "cobra" src="static/images/Cobra(3).png" width="15%" height="17%">
         <a id = "accedi_png" href = "/registrazione"><img src="static/images/login(1).png" width="100" height="100"></a>
-        <a id = "ricerca" href = "/ricerca"><img src="static/images/esplora.png" width="30%" height="40%"></a>
+        <a href = "/ricerca"><img id = "ricerca_home" src="static/images/explore_giusto.jpg"></a>
         <form action="/difficolta" method = "GET">
             <label>
                 <input id = "easy_img" type="radio" name="Diff" value="Facile" required>
@@ -17,9 +17,11 @@
                 <input id = "hard" type="radio" name="Diff" value="Difficile" required>
                 <img id = "hard_img" src="static/images/fast.png" width = "100" height = "85">
             </label>
-            <input type = "image" id = "quiz" src="static/images/quiz.png" width="30%" height="40%" alt = "Submit Form">
+            <input type = "image" id = "quiz" src="static/images/quiz_giusto.jpg" alt = "Submit Form">
         </form>
         <b><h1 id = "Difficolta">Seleziona la difficoltà:</h1></b>
-        <h2 id = "desc_explore">Nella sezione "explore" potari interagire con una mappa geografica dell'Italia, ed attraverso quest'utlima potrai reperire le informazioni riguardanti le regioni e le province dell'Italia stessa</h2>
+        <center><h2 id = "desc_explore">Nella sezione "explore" potrai interagire con una mappa geografica dell'Italia, ed attraverso quest'utlima potrai reperire le informazioni riguardanti le regioni e le province dell'Italia stessa</h2></center>
+        <center><h2 id = "desc_quiz">Nella sezione "quiz" potrai intrattenerti con una serie di domande inerenti alla mappa geografica dell'Italia</h2></center>
+
     </body>
 </html>
