--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,15 +16,19 @@
     top: 1%;
     right: 2%;
 }
-#ricerca {
+#ricerca_home {
     position: absolute;
     top: 20%;
     left: 15%;
+    width: 30%;
+    height: 40%;
 }
 #quiz {
     position: absolute;
     top: 20%;
     right: 15%;
+    width: 30%;
+    height: 40%;
 }
 #easy {
     position: absolute;
@@ -53,8 +57,15 @@
 }
 #desc_explore {
     position: absolute;
-    top: 73%;
-    left: 17%;
+    top: 74.5%;
+    left: 18%;
     color:rgb(255, 255, 255);
-    width: 20%;
+    width: 24%;
+}
+#desc_quiz {
+    position: absolute;
+    top: 74.5%;
+    right: 18%;
+    color:rgb(255, 255, 255);
+    width: 24%;
 }
