--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -2,7 +2,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style2.css') }}">
     <title>Quiz</title>
 </head>
-<body id = "quiz_home" background="static/images/quiz.jpg" width = 100%, height = 100&>
+<body>
+    <img id = "quiz_home" src = "static/images/quiz.jpg">
     <h2>PUNTEGGIO: {{score}}</h2>
     <h2>{{question}}/10</h2>
     <h1 id = "sottotitolo">{{text}}</h1>
