--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -7,7 +7,7 @@
     <h2>PUNTEGGIO: {{score}}</h2>
     <h2>{{question}}/10</h2>
     <h1 id = "sottotitolo">{{text}}</h1>
-    <img src="/regione_png">
+    <img id = "regione" src="/regione_png">
     <form action="/quiz_facile" method = "GET">
         <p>
             <input type = "radio" name = "Scelta" value={{opzione1}} required/>{{opzione1}} <input type = "radio" name = "Scelta" value={{opzione2}} />{{opzione2}} <br>
