--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
             <input type = "text" name = "Nick" required/>
             <p>Email<input type="email" name="Email" pattern=".+@gmail.com" size="30" required></p>
             <p>Password <input type = "password" name ="Password" required/></p>
-            <p><input type = "submit" value = "Submit"/></p>
-            <p>Se non sei hai mai acceduto effettua la<a href="/registrazione">registrazione!</a>!</p>
+            <p><input type = "submit" value = "Login"/></p>
+            <a href="/"><p>Se non sei hai mai fatto l'accesso effettua la registrazione!</p></a>
         </form>
 </body>
