--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -1,4 +1,4 @@
-<form action="/registrazione" method = "POST">
+<form action="/" method = "POST">
     <h3>Nickname</h3> <br>
     <input type = "text" name = "Nick" required/>
     <h3>Email</h3> <br>
