--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,18 @@
     top: 1.3%;
     left: 43.5%;
 }
-#accedi_png {
+#nome {
+    position:absolute;
+    top:0.5%;
+    left:0.5%;
+    color:rgb(255, 255, 255);
+}
+#logout_png {
     position: absolute;
-    top: 1%;
+    top: 2%;
     right: 2%;
+    cursor: pointer; 
+
 }
 #ricerca_home {
     position: absolute;
@@ -33,12 +41,14 @@
 #easy {
     position: absolute;
     top: 65%;
-    right: 36%;
+    left:60%;
 }
 #easy_img {
     position: absolute;
     top: 65%;
-    right:36%;
+    left:60%;
+    width:4%;
+    height: 6.5%;
 }
 #hard {
     position: absolute;
@@ -49,11 +59,14 @@
     position: absolute;
     top: 65%;
     right: 20%;
+    width:4%;
+    height: 6.5%;
 }
 #Difficolta {
     position: absolute;
     top: 59%;
-    right: 22.5%;
+    right: 23.6%;
+    height:3%;
 }
 #desc_explore {
     position: absolute;
@@ -65,6 +78,13 @@
 #desc_quiz {
     position: absolute;
     top: 74.5%;
+    right: 18%;
+    color:rgb(255, 255, 255);
+    width: 24%;
+}
+#desc_quiz2 {
+    position: absolute;
+    top: 81%;
     right: 18%;
     color:rgb(255, 255, 255);
     width: 24%;
