--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -3,7 +3,7 @@
     <title>Quiz</title>
 </head>
 <body>
-    <img id = "quiz_home" src = "static/images/quiz.jpg">
+    <img id = "background_quiz" src = "static/images/quiz.jpg">
     <h2>PUNTEGGIO: {{score}}</h2>
     <h2>{{question}}/10</h2>
     <h1 id = "sottotitolo">{{text}}</h1>
