--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -1,8 +1,9 @@
-#quiz_home {
-    top:0%;
-    left:0%;
-    width:100%;
-    height:100%;
+#background_quiz {
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  min-width: 100%;
+  min-height: 100%;
 }
 #regione {
   position:absolute;
