--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,13 @@
     <title>Login</title>
 </head>
 <body>
-        <form action="/login" method="POST">
-            <h3>Nickname</h3> <br>
-            <input type = "text" name = "Nick" required/>
-            <p>Email<input type="email" name="Email" pattern=".+@gmail.com" size="30" required></p>
-            <p>Password <input type = "password" name ="Password" required/></p>
-            <p><input type = "submit" value = "Login"/></p>
-            <a href="/"><p>Se non sei hai mai fatto l'accesso effettua la registrazione!</p></a>
-        </form>
+    <img id = "background_regi" src = "static/images/paesaggioFuturisticoViola.jpg">
+    <form action="/login" method="POST">
+        <h3>Nickname</h3> <br>
+        <input type = "text" name = "Nick" required/>
+        <p>Email<input type="email" name="Email" pattern=".+@gmail.com" size="30" required></p>
+        <p>Password <input type = "password" name ="Password" required/></p>
+        <p><input type = "submit" value = "Login"/></p>
+        <a href="/"><p>Se non sei hai mai fatto l'accesso effettua la registrazione!</p></a>
+    </form>
 </body>
