--- a/templates/home.html
+++ b/templates/home.html
@@ -23,11 +23,11 @@
         <h1 id = "Difficolta">Seleziona la difficoltà:</h1>
         <center><h2 id = "desc_explore">Nella sezione "explore" potrai interagire con una mappa geografica dell'Italia, ed attraverso quest'utlima potrai reperire le informazioni riguardanti le regioni e le province dell'Italia stessa</h2></center>
         <center><h2 id = "desc_quiz">Nella sezione "quiz" potrai intrattenerti con una serie di domande inerenti alla mappa geografica dell'Italia</h2></center>
-        <center><h2 id = "desc_quiz2">Modalità difficile: avrai solo 20 secondi per rispondere alla domanda e non riceverai alcun auto per quanto riguarda le province</h2></center>
+        <center><h2 id = "desc_quiz2">Modalità difficile: avrai solo 20 secondi per rispondere alla domanda e non riceverai alcun aiuto per quanto riguarda le province</h2></center>
         <script>
             function logoutFun() {
                 if (window.confirm('Sei sicuro di voler effettuare il logout?')) {
-                    window.location.href = "/"
+                    window.location.href = "/login"
                 }else {
                     window.location.href = "/home"
                 }
