--- a/templates/registrazione.html
+++ b/templates/registrazione.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 <img id = "background_regi" src = "static/images/paesaggioFuturisticoViola.jpg">
+<img id = "cobra" src="static/images/Cobra(3).png" width="15%" height="17%">
+<h1 id = "benvenuto">Benvenuto su GeoCobra</h1>
 <form action="/" method = "POST">
     <div id = "form_regi">
         <center>
@@ -15,7 +17,7 @@
         <input type = "password" name = "Password" required/>
         <h2 class = "form_regis">Conferma Password</h2> <br>
         <input type = "password" name = "Cpassword" required/>
-        <p><input type = "submit" value = "Registrati"/></p>
+        <p><input id = "submit" type = "submit" value = "Registrati"/></p>
         <p class = "form_regis" id = "login_link"><a href="/login">Hai già effettuato la registrzione? Effettua il Login!</a></p>
         </center>
     </div>
