--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
         <title>Home</title>
     </head>
     <body id = "home">
-        <img id = "banda" src="static/images/Banda Viola(2).png" width="100%" height="18.4%">
+        <img id = "banda" src="static/images/Banda Viola Chiaro.png" width="100%" height="18.4%">
         <img id = "cobra" src="static/images/Cobra(3).png" width="15%" height="17%">
         <h1 id = "nome">Utente: {{nome}}</h1>
         <img id = "logout_png" src="static/images/logout.png" width="100" height="100" onclick="logoutFun()">
