--- a/templates/quiz_facile.html
+++ b/templates/quiz_facile.html
@@ -3,7 +3,7 @@
     <title>Quiz</title>
 </head>
 <body>
-    <img id = "background_quiz" src = "static/images/quiz.jpg">
+    <img id = "background_quiz" src = "static/images/quiz-time.png">
     <h1 id = "user">GIOCATORE: {{nome}}</h1>
     <h2 id = "punti">PUNTEGGIO: {{score}}</h2>
     <h2 id = "domanda">DOMANDA: {{question}}/10</h2>
