--- a/static/css/style_quiz.css
+++ b/static/css/style_quiz.css
@@ -8,7 +8,7 @@
 #regione {
   position:absolute;
   left: 27%;
-  top: 13.7%;
+  top: 22.8%;
   width: 46%;
   height: 58%;
 }
@@ -37,7 +37,7 @@
   left:0;
   text-align: center;
   width: 100%;
-  color: rgb(175, 59, 150);
+  color: rgb(228, 59, 200);
   font-weight: bold;
   font-size: 60px;
 }
@@ -52,7 +52,7 @@
   color:rgb(255, 255, 255);
 }
 #submit {
-  background-color: rgb(204, 78, 193);
+  background-color: rgb(228, 59, 200);
   border: none;
   color: rgb(255, 255, 255);
   padding: 10px 18px;
@@ -60,6 +60,15 @@
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
+  font-weight: bold;
   margin: 4px 2px;
   cursor: pointer;
+}
+#output {
+  position:absolute;
+  top: 33%;
+  left:7%;
+  font-weight: bold;
+  font-size: 25px;
+  color:rgb(255, 255, 255);
 }
