--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style_home.css') }}">
         <title>Home</title>
     </head>
     <body id = "home">
