--- a/templates/risultato_difficileMedio.html
+++ b/templates/risultato_difficileMedio.html
@@ -3,10 +3,10 @@
     <title>Risultato</title>
 </head>
 <body>
-    <img id = "background_risultato" src = "static/images/paesaBene.jpeg">
-    <h1 id = "punteggio">Complimenti {{user}}, hai risposto correttamente a {{punti}} domande su 10</h1>
+    <img id = "background_risultato" src = "static/images/paesaggioMedio.png">
+    <h1 id = "punteggio">Hai risposto correttamente a {{punti}} domande su 10</h1>
     <h1 id = "battuta">{{text}}</h1>
-    <img id = "immagine" src = "static/images/ranaSwag.png">
+    <img id = "immagine" src = "static/images/ranaMedia.png">
     <a href = "/quiz_difficile"><h2 id = "link">{{text_link}}</h2></a>
     <a href = "/home"><h2 id = "home">Torna all'HomePage</h2></a>
 </body>
