--- a/templates/cercaProv.html
+++ b/templates/cercaProv.html
@@ -1,1 +1,2 @@
-<iframe class="map", src="/mappaRichiestaProv" width="100%" height="100%"></iframe>
+{{table | safe}}
+<iframe class="map", src="/mappaRichiestaProv" width="100%" height="93%"></iframe>
