--- a/templates/province.html
+++ b/templates/province.html
@@ -1,6 +1,6 @@
 <form action="/ricercaProv" method = "GET">
     <input type="text"  placeholder="Cerca Provincia" name="CercaProv" />
-    <input type = "submit" value = "Cerca"/>
+    <input type="image" src="/workspace/Progetto_Informatica/static/images/search.png" alt = "Submit" >
 </form>
 <button> <a id="regione" href="/">Regione </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
