--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -1,6 +1,6 @@
 <form action="/ricerca" method = "GET">
     <input type="text"  placeholder="Cerca Regione" name="Cerca" />
-    <input type="image" src="/workspace/Progetto_Informatica/static/images/search.png" alt = "Submit" >
+    <input type="image" src="/static/images/search.png" alt = "Submit" >
 </form>
 <button> <a id="regione" href="/">Regioni </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
