--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -1,9 +1,11 @@
-<form action="/ricerca" method = "GET">
-    <input type="text"  placeholder="Cerca Regione" name="Cerca" />
-    <input type="image" src="/static/images/search.png" alt = "Submit" >
-</form>
-<button> <a id="regione" href="/">Regioni </a></button>
-<button> <a id="province" href="/Province">Province </a></button>
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_explore.css') }}">
+</head>
 <iframe class="map", src="/map" width="100%" height="100%"></iframe>
-
+<form action="/ricerca" method = "GET">
+    <input type="text" class="ricerca"  placeholder="Cerca Regione" name="Cerca" />
+    <input type="image" class="imgRic"  src="/static/images/search.png" alt = "Submit" >
+</form>
+<button id="ResetReg" > <b><a href="/">Ti sei perso Click Me! </a></b></button>
+<button id="province"> <a href="/Province">Province </a></button>
 
