--- a/templates/province.html
+++ b/templates/province.html
@@ -1,7 +1,10 @@
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_explore.css') }}">
+</head>
+
 <form action="/ricercaProv" method = "GET">
     <input type="text"  placeholder="Cerca Provincia" name="CercaProv" />
     <input type="image" src="/static/images/search.png" alt = "Submit" width="30" height="30">
 </form>
 <button> <a id="regione" href="/">Regione </a></button>
 <button> <a id="province" href="/Province">Province </a></button>
-<iframe class="map", src="/mappa" width="100%" height="100%"></iframe>
