--- a/templates/homeR.html
+++ b/templates/homeR.html
@@ -7,7 +7,7 @@
     <input id = "imgRic" type="image" src="static/images/search (1).png" alt = "Submit" >
 </form>
 <form action = "/" method = "GET">
-    <button id="ResetReg"><b>Ti sei perso Click Me!</b></button>
+    <p><input id = "ResetReg" type = "submit" value = "Ti sei perso Click Me!"/></p><br>
 </form>
 <button id="province"> <a href="/Province">Province </a></button>
 
