--- a/static/css/style_explore.css
+++ b/static/css/style_explore.css
@@ -25,22 +25,24 @@
 }
 
 #imgRic{
-    position: absolute;
-    top: 3.3%;
-    left: 57.2%;
-    width: 3%;
-    height: 4%;
+  position: absolute;
+  top: 3.3%;
+  left: 57.2%;
+  width: 2.6%;
+  height: 4%;
     
 }
 #ResetReg{
-  font-size: 14;
-  background-color: rgba(255, 255, 255, 0);
-  border-color: rgba(85, 85, 85, 0);
   position:absolute;
   bottom:5.5%;
   width: 10%;
   height:5%;
-  
+  background-color: #00ff1a50;
+  border-color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 12px;
+  cursor: pointer;
 }
 #province{
   position:absolute;
