--- a/static/css/style_explore.css
+++ b/static/css/style_explore.css
@@ -1,54 +1,77 @@
 #mappa {
+  position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
 }
 #txtbox {
-  font-size: 13;
   position: absolute;
+  font-size: 17;
   top: 2%;
-  left: 37%;
+  left: 40%;
   width: 20%;
   height: 5%;
   padding: 12px 20px;
-  margin: 8px 0;
+  background-color: rgba(255, 255, 255, 0.719);
   box-sizing: border-box;
-  border: 3px solid #ccc;
+  border: 3px solid rgb(128, 194, 67);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
 }
-  
-#txtbox:focus {
-  border: 4px solid #555;
+#txtbox:hover {
+  border: 3px solid rgb(9, 128, 9);
+  background-color: rgb(255, 255, 255);
 }
-
+#txtbox:focus {
+  border: 3px solid rgb(9, 128, 9);
+  background-color: rgb(255, 255, 255);
+}
 #imgRic{
   position: absolute;
-  top: 3.3%;
-  left: 57.2%;
-  width: 2.6%;
+  top: 2.5%;
+  left: 57.45%;
+  width: 2.3%;
   height: 4%;
-    
 }
-#ResetReg{
+#Reset{
   position:absolute;
-  bottom:5.5%;
+  left: 0;
+  bottom:0;
   width: 10%;
   height:5%;
-  background-color: #00ff1a50;
-  border-color: rgb(0, 0, 0);
+  background-color: #00ff1a70;
   color: rgb(0, 0, 0);
   text-align: center;
-  font-size: 12px;
+  font-size: 13.4px;
   cursor: pointer;
+  font-weight: bold;
+  border: 3px solid rgb(128, 194, 67);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
-#province{
+#Reset:hover {
+  border: 3px solid rgb(9, 128, 9);
+  background-color: #00ff1aa2;
+}
+#cambio{
   position:absolute;
-  top:94.5%;
-  left:10%;
+  left: 5%;
+  top: 2%;
   width: 10%;
-  height:5%;
+  height: 5%;
+  background-color: #00ff1a50;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 13.4px;
+  cursor: pointer;
+  font-weight: bold;
+  border: 3px solid rgb(128, 194, 67);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
-
+#cambio:hover {
+  border: 3px solid rgba(9, 128, 9, 0.815);
+  background-color: #00ff1a79;
+}
