--- a/templates/province.html
+++ b/templates/province.html
@@ -2,10 +2,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_explore.css') }}">
 </head>
 <iframe id="mappa", src="/mappa"></iframe>
-
 <form action="/ricercaProv" method = "GET">
-    <input type="text"  placeholder="Cerca Provincia" name="CercaProv" />
-    <input type="image" src="/static/images/search (1).png" alt = "Submit" width="30" height="30">
+    <input id = "txtbox" type="text" placeholder="Cerca Provincia" name="CercaProv" />
+    <input id = "imgRic" type="image" src="static/images/search (1).png" alt = "Submit" >
 </form>
-<button> <a id="regione" href="/">Regione </a></button>
-<button> <a id="province" href="/Province">Province </a></button>
+<form action = "/Province" method = "GET">
+    <p><input id = "Reset" type = "submit" value = "Ti sei perso? Click Me!"/></p><br>
+</form>
+<form action = "/" method = "GET">
+    <p><input id = "cambio" type = "submit" value = "Regioni"/></p><br>
+</form>
