--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
         <img id = "cobra" src="static/images/Cobra(3).png" width="15%" height="17%">
         <h1 id = "nome">Utente: {{nome}}</h1>
         <img id = "logout_png" src="static/images/logout.png" width="100" height="100" onclick="logoutFun()">
-        <a href = "/ricerca"><img id = "ricerca_home" src="static/images/explore_giusto.jpg"></a>
+        <a href = "/explore"><img id = "ricerca_home" src="static/images/explore_giusto.jpg"></a>
         <form action="/difficolta" method = "GET">
             <label>
                 <input id = "easy" type="radio" name="Diff" value="Facile" required>
